# 3D-Rendering

./: .gitignore  README.md
Assignment1/Assignment_01/: CMakeLists.txt  ShaderUtil.cpp  ShaderUtil.h  main.cpp
MGE_CLion/: CMakeLists.txt
MGE_CLion/mge/: MGEDemo.cpp
MGE_CLion/mge/core/: Camera.cpp  Camera.hpp
MGE_CLion/mge/materials/: ColorMaterial.cpp
